build_err.log
test
+- run test
   +- compile test Debug native 2 errors
src/net/fetch.zig:80:22: error: unreachable else prong; all cases already handled
                else => return error.UnknownError,
                ~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~
referenced by:
    test.FetchClient respects timeout: tests/net/fetch_tests.zig:114:29
    comptime: test_runner.zig:112:17
tests/net/loader_tests.zig:16:13: error: member function expected 2 argument(s), found 1
    try head.appendChild(link);
        ~~~~^~~~~~~~~~~~
src/dom/node.zig:45:9: note: function declared here
    pub fn appendChild(self: *Node, child: *Node, limits: anytype) !void {
    ~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error: the following command failed with 2 compilation errors:
/opt/homebrew/Cellar/zig/0.15.2/bin/zig test -cflags -fobjc-arc -Isrc/platform -- /Users/vaiditya/Desktop/PROJECTS/metal/src/platform/event_bridge.m -cflags -fobjc-arc -Isrc/platform -- /Users/vaiditya/Desktop/PROJECTS/metal/src/platform/net_bridge.m -ODebug -I /Users/vaiditya/Desktop/PROJECTS/metal/src/platform -Mroot=/Users/vaiditya/Desktop/PROJECTS/metal/test_runner.zig -framework AppKit -framework Foundation -framework MetalKit -framework Metal -lc --cache-dir .zig-cache --global-cache-dir /Users/vaiditya/.cache/zig --name test --zig-lib-dir /opt/homebrew/Cellar/zig/0.15.2/lib/zig/ --listen=-

Build Summary: 0/3 steps succeeded; 1 failed
test transitive failure
+- run test transitive failure
   +- compile test Debug native 2 errors

error: the following build command failed with exit code 1:
.zig-cache/o/ae7e16ff3d970be967f148b9e6a6c8ce/build /opt/homebrew/Cellar/zig/0.15.2/bin/zig /opt/homebrew/Cellar/zig/0.15.2/lib/zig /Users/vaiditya/Desktop/PROJECTS/metal .zig-cache /Users/vaiditya/.cache/zig --seed 0xab1ae6bd -Z0585e0511749f0cd test
